metadata/objects/App_Task__c.object
<CustomObject>
    <description>Object used to store the information about a task that needs to be processed later. Record Indicates a unit of work that is done synchronously/asynchronously. The unit of work could be associated with ab object and/or record or it need not be associated with any object.</description>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>The action this task is associated with.</inlineHelpText>
        <label>Action</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attempts__c</fullName>
        <inlineHelpText>Indicates the number of times, this task is processed. Usually attempts will be 1. But in case of an error, task can be retried to be processed and in those cases, value could be more than 1.</inlineHelpText>
        <label>Attempts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay_Until__c</fullName>
        <inlineHelpText>Indicates the time until which this task should not be processed. This can be used to delay processing between attempts.</inlineHelpText>
        <label>Delay Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <inlineHelpText>Indicates any external id associated with this task</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input__c</fullName>
        <inlineHelpText>Any Input that is required to process this task. The format and content of this field is left to each client.</inlineHelpText>
        <label>Input</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <inlineHelpText>Any applicable processing message</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <inlineHelpText>The module to which this task is associated with.</inlineHelpText>
        <label>Module</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output__c</fullName>
        <inlineHelpText>Any output produced during processing of this task. Note that if you want to capture logs, it is better to capture in App Log instead of App Task</inlineHelpText>
        <label>Output</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Task_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this task is part of a hierarchy, or is it a duplicate of another task, then this points to that task.</inlineHelpText>
        <label>Parent Task</label>
        <referenceTo>App_Task__c</referenceTo>
        <relationshipLabel>Child Tasks</relationshipLabel>
        <relationshipName>Child_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Change_Type__c</fullName>
        <inlineHelpText>Indicates the type of source record change resulted in this task.</inlineHelpText>
        <label>Record Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <inlineHelpText>If this task is associated with a particular object, then indicates the record of that object.</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <formula>If(Not(IsBlank(Record_Id__c)), HYPERLINK(&apos;/&apos; + Record_Id__c, Sobject__c + &apos; (&apos; + Record_Id__c + &apos;)&apos;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hyperlink to the record which this task is associated with.</inlineHelpText>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject__c</fullName>
        <inlineHelpText>Sobject name to which this task is associated with.</inlineHelpText>
        <label>Sobject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stats__c</fullName>
        <inlineHelpText>Capture any processing statistics associated with this task. For ex., number of records inserted, updated etc.,</inlineHelpText>
        <label>Stats</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Indicates the status of this processing of this task</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <inlineHelpText>Any status applicable for module/action of this task</inlineHelpText>
        <label>Sub Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value1__c</fullName>
        <inlineHelpText>Value1-5 fields are used to capture any individual values associated with this task.</inlineHelpText>
        <label>Value1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value3__c</fullName>
        <label>Value3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record_Change_Type__c</columns>
        <columns>Stats__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Parent_Task_Id__c</columns>
        <columns>Value1__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record_Change_Type__c</columns>
        <columns>Stats__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Parent_Task_Id__c</columns>
        <columns>Value1__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Created Today</label>
    </listViews>
    <listViews>
        <fullName>All_Errors</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record_Change_Type__c</columns>
        <columns>Stats__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Parent_Task_Id__c</columns>
        <columns>Value1__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>All Errors</label>
    </listViews>
    <listViews>
        <fullName>All_Errors_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record_Change_Type__c</columns>
        <columns>Stats__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Parent_Task_Id__c</columns>
        <columns>Value1__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed,Error</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Errors Created Today</label>
    </listViews>
    <listViews>
        <fullName>All_Failed</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record_Change_Type__c</columns>
        <columns>Stats__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Parent_Task_Id__c</columns>
        <columns>Value1__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>All Failed</label>
    </listViews>
    <listViews>
        <fullName>All_Failed_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record_Change_Type__c</columns>
        <columns>Stats__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Parent_Task_Id__c</columns>
        <columns>Value1__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Failed Created Today</label>
    </listViews>
    <listViews>
        <fullName>All_InProgress</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record_Change_Type__c</columns>
        <columns>Stats__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Parent_Task_Id__c</columns>
        <columns>Value1__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Processing</value>
        </filters>
        <label>All InProgress</label>
    </listViews>
    <listViews>
        <fullName>All_Success</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record_Change_Type__c</columns>
        <columns>Stats__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Parent_Task_Id__c</columns>
        <columns>Value1__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </filters>
        <label>All Success</label>
    </listViews>
    <listViews>
        <fullName>All_Success_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Message__c</columns>
        <columns>Record__c</columns>
        <columns>Attempts__c</columns>
        <columns>Delay_Until__c</columns>
        <columns>External_Id__c</columns>
        <columns>Record_Change_Type__c</columns>
        <columns>Stats__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Parent_Task_Id__c</columns>
        <columns>Value1__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Success Created Today</label>
    </listViews>
    <nameField>
        <displayFormat>APT-{0000000000}</displayFormat>
        <label>App Task#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>